# REST-API-Semantic-Search-on-Vector-Database

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  sports.jsonl
src/: main.rs  setup.rs
