[package]
name = "tinayiluo_ids721_week7"
version = "0.1.0"
edition = "2021"

# not needed, used for testing
# to setup agg and viz call
# [[bin]]
# name = "lambda_test"
# path = "src/main.rs"

# to setup vectordb, not needed after so commneted out 
# [[bin]]
# name = "setup_test"
# path = "src/setup.rs"


# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda_http = "0.10.0"
pkg-config = "0.3.30"
qdrant-client = "1.8.0"
reqwest = { version = "0.12", features = ["json"] }
serde = "1.0.147"
serde_json = "1.0.114"
# add this to build properly issue with mac
openssl = { version = "0.10.35", features = ["vendored"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

